--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -296,6 +296,9 @@ es:
         header_title: Solicitud de restablecimiento de contraseña
         header_text: Hemos recibido tu solicitud para restablecer tu contraseña de %{app_name}.
         action: Reestablecer tu contraseña
+        expiry: 'Esta solicitud caducará en %{expire} horas. '
+        instruction_1: 'Has click aquí para generar una nueva solicitud. '
+        instruction_2: Si tu no has hecho esta solicitud, o estás teniendo dificultades restableciendo tu contraseña, ponte en contacto con nosotros %{support_email}
       invitation_instructions:
         subject: "%{user} ha sido invitado a unirse al equipo %{team}"
         hello: ¡Hola %{name}!
@@ -340,6 +343,17 @@ es:
     duplicated:
       subject: Tu método de inicio de sesión para %{app_name}
       header_title: Cuenta duplicada
+      one_email: |-
+          <p>Hola, este es solo un recordatorio amistoso para ayudarte a iniciar sesión en %{app_name}. </p>
+          <p> Lo que sucedió fue que intentaste ingresar a %{app_name} con una cuenta de %{user_provider} asociada a %{user_email}. Pero esta dirección de correo electrónico ya está asociada con esta cuenta de%{duplicate_provider} en %{app_name} .</p>
+          <p> Lo qué debes hacer a continuación es: inicia sesión con %{duplicate_provider}. </p>
+          <p> Entonces iniciarás sesión con la cuenta que estabas utilizando anteriormente.
+          Si necesita ayuda adicional, ponte en contacto con nosotros %{support_email} .</p>
+      both_emails: |-
+          <p>Hola, esto es solo un recordatorio amistoso para ayudarte a iniciar sesión en %{app_name} .</p>
+          <p>Lo que sucedió fue que intentaste crear una nueva cuenta en %{app_name},  con un correo electrónico que está asociado a una cuenta que ya existe. </p>
+          <p>  Intenta iniciar sesión con tu correo electrónico y contraseña, en lugar de crear una nueva cuenta. </p> <p> Entonces iniciarás sesión con la cuenta que estabas utilizando anteriormente.
+          Si necesita ayuda adicional, ponte en contacto con nosotros%{support_email}. </p>
       email: correo electrónico
     invitation:
       title: Nueva invitación
@@ -349,10 +363,19 @@ es:
       header_text: Una cuenta de usuario se eliminó y su contenido se reasignó a un usuario %{anonymous} %{id}
       anonymous: anónimo
     admin_mailer:
+      team_dump_title: 'Datos del equipo '
       types:
         csv: informe
+        images: archivo de imágenes
+      team_dump_button: 'Descargar los datos del equipo '
       decompress_text: El %{type} se descargará como un archivo comprimido y cifrado. Para descomprimirlo, usa esta contraseña %{password}.
       expire_note: Ten en cuenta que este enlace caducará en %{days} días.
+      project_export_csv_subject: "El informe del proyecto [%{team} - %{project}] está listo para ser descargado"
+      project_export_images_subject: "El archivo de imágenes del proyecto [%{team}- %{project}] está listo para ser descargado"
+      project_export_title: Datos del proyecto
+      project_export_button: Descargar los datos del proyecto
+      project_export_csv_text: 'Solicitaste descargar un reporte de %{project} - aquí está el enlace de descarga: %{link}'
+      project_export_images_text: 'Solicitaste descargar el archivo de imágenes del proyecto %{project} - aquí está el enlace de descarga: %{link}'
       team_import_subject: Tu importación de datos se ha completado
       team_import_title: Importación de datos
       team_import_text: "<p>Se ha completado la importación de datos en %{app_name}. Puedes mirar %{worksheet_url} para revisar el estado de cada ítem a importar.</p><p> Nota que puedes reiniciar la importación después de corregir cualquier error que se informe allí - los ítems previamente- importados no se duplicarán. </p>"
@@ -452,7 +475,27 @@ es:
   task_suggestion_invalid_value: Lo sentimos, el valor de la sugerencia no es válido
   tag_text_id_not_found: Lo sentimos, no hay ninguna etiqueta con el identificador proporcionado
   annotation_type_language_label: Idioma
+  smooch_bot_message_confirmed: |-
+      ¡Gracias! tu solicitud se ha agregado a nuestra cola de verificación.
+
+      Intentaremos obtener un informe dentro de las 24 horas, pero ten en cuenta que no podemos responder a todas las solicitudes.
+  smooch_bot_message_unconfirmed: 'Como no respondiste a la pregunta tecleando el número 1,  no procesaremos más tu solicitud. ¡Gracias! '
+  smooch_bot_message_type_unsupported: Lo sentimos, este tipo de formatos todavía no los procesamos. Pero puedes enviarnos textos, imágenes y enlaces para verificarlos. ¡Gracias!
   smooch_bot_meme: Hicimos este meme gracias a la pregunta que nos enviaste para que verificáramos, ¡compártelo! Mira más en %{url}.
+  smooch_bot_result: |-
+      [Informe de Verificación] El mensaje que compartiste con nosotros ha sido marcado como  *%{status}*.
+
+      Este es el proceso que seguimos para llegar a esta conclusión: %{url}
+  smooch_bot_ask_for_confirmation: |-
+      Gracias por enviar este mensaje.
+
+      ¿Quieres que verifiquemos este contenido?
+
+      Para decir sí, *por favor responde con 1 *. Cualquier otra respuesta terminará con nuestra conversación.
+  smooch_bot_window_closing: "El volumen de solicitudes que hemos recibido en este canal es bastante alto y aún no hemos podido resolver tu solicitud. \nGracias por tu paciencia."
+  smooch_bot_not_final: |-
+      [Informe de Verificación - CORRECCIÓN] El mensaje que compartiste con nosotros fue erróneamente marcado como *%{status}*.
+      Todavía está en nuestra cola de verificación para añadirle información adicional.
   smooch_bot_disabled: Gracias por enviar este mensaje. No podemos devolver ningún informe de verificación, porque este proyecto ya no está activo.
   smooch_bot_result_changed: |-
       [Informe de Verificación - CORRECCIÓN] El mensaje que compartiste con nosotros cambió de *%{previous_status}* a*%{status}*.
