Tickets #7622 and #7627: (1) Fixing bug related to invisible character on e-mail address and (2) using a dedicated Transifex resource per team for custom messages

--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -1,3 +1,4 @@
+---
 bn:
   statuses:
     media:
@@ -11,7 +12,7 @@ bn:
         label: চলমান
         description: কাজ শুরু হয়েছে, কিন্তু এখনো কোন অনুবাদ তৈরি করা হয়নি
       not_true:
-        label: 'মিথ্যা'
+        label: মিথ্যা
         description: 'উপসংহার: আইটেমের কন্টেন্ট মিথ্যা'
       verified:
         label: যাচাই করা হয়েছে
@@ -42,12 +43,10 @@ bn:
       unstarted:
         label: শুরু করা হয় নি
         description: ডিফল্ট, শুধু চেক করা হয়েছে, কাজ শুরু হয়নি
-  smooch_bot_meme: এখানে আমরা আপনার অনুরোধকৃত আইটেমের ভিত্তিতে তৈরি একটি মেমে যাচাই করেছি। আরো জানুন%{url}
+  smooch_bot_meme: এখানে আমরা আপনার অনুরোধকৃত আইটেমের ভিত্তিতে তৈরি একটি মেমে যাচাই
+    করেছি। আরো জানুন%{url}
   smooch_bot_result_changed: |-
-      [যাচাইকরণ প্রতিবেদন - সংশোধন] আপনি আমাদের সাথে যে বার্তাটি ভাগ করেছেন সেটি * * {পূর্ব_ স্ট্যাটাস} * থেকে  {স্ট্যাটাস} * থেকে পরিবর্তিত হয়েছে।
+    [যাচাইকরণ প্রতিবেদন - সংশোধন] আপনি আমাদের সাথে যে বার্তাটি ভাগ করেছেন সেটি * * {পূর্ব_ স্ট্যাটাস} * থেকে  {স্ট্যাটাস} * থেকে পরিবর্তিত হয়েছে।
 
-      এটি নির্ধারণ করতে আমরা যে পদক্ষেপগুলি গ্রহণ করেছি তা এখানে:
-      {url}
-  smooch_bot_disabled_checkpoint: |-
-      এই বার্তা পাঠানোর জন্য আপনাকে ধন্যবাদ।
-      আমরা কোনো যাচাই প্রতিবেদন পাঠাতে অক্ষম, কারণ চেকপয়েন্ট এই টিপলাইনটি আর ব্যবহার করছে না।
+    এটি নির্ধারণ করতে আমরা যে পদক্ষেপগুলি গ্রহণ করেছি তা এখানে:
+    {url}
