--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -1,3 +1,4 @@
+---
 ml:
   statuses:
     ids:
@@ -25,8 +26,8 @@ ml:
         label: നടന്നുകൊണ്ടിരിക്കുന്നു
         description: പ്രവൃത്തി തുടങ്ങിയിട്ടുണ്ട്. പരിഭാഷപ്പെടുത്തിയിട്ടില്ല
       not_true:
-        label: 'തെറ്റാണ്'
-        description: ' കണ്ടെത്തല്‍ : താങ്കള്‍ പരിഗണനക്കയച്ച സംഗതിയുടെ ഉള്ളടക്കം തെറ്റാണ്.'
+        label: തെറ്റാണ്
+        description: " കണ്ടെത്തല്‍ : താങ്കള്‍ പരിഗണനക്കയച്ച സംഗതിയുടെ ഉള്ളടക്കം തെറ്റാണ്."
       verified:
         label: ഉറപ്പുവരുത്തിയിട്ടുണ്ട്
         description: 'കണ്ടെത്തല്‍ : താങ്കളയച്ച സംഗതിയുടെ ഉള്ളടക്കം പരിശോധിച്ച് ഉറപ്പുവരുത്തിയിട്ടുണ്ട്.'
@@ -90,8 +91,10 @@ ml:
         description: പരിഭാഷയില്‍ തകരാറ് കണ്ടെത്തി
   errors:
     messages:
-      extension_white_list_error: 'ഇപ്രകാരമുള്ളവ സ്വീകാര്യമല്ല 1 %{extension}. ഇവയെല്ലാമാണ് അനുവദനീയമായിട്ടുള്ളത്  2 % {allowed_types}'
-      invalid_size: '1%{min_width} x 2% { min_height} പിക്സലിനും 3% {max_widhth}x 4%{max_height} പിക്സലിനും ഇടയിലായിരിക്കണം ഫയലിന്റെ വലുപ്പം  '
+      extension_white_list_error: ഇപ്രകാരമുള്ളവ സ്വീകാര്യമല്ല 1 %{extension}. ഇവയെല്ലാമാണ്
+        അനുവദനീയമായിട്ടുള്ളത്  2 % {allowed_types}
+      invalid_size: '1%{min_width} x 2% { min_height} പിക്സലിനും 3% {max_widhth}x
+        4%{max_height} പിക്സലിനും ഇടയിലായിരിക്കണം ഫയലിന്റെ വലുപ്പം  '
   activerecord:
     models:
       link: 'ലിങ്ക് '
@@ -136,14 +139,12 @@ ml:
             slug:
               slug_format: വാക്കുകളും സംഖ്യകളും ചെറിയ രേഖാഖണ്ഡങ്ങളും മാത്രമേ സ്വീകരിക്കൂ
       messages:
-        record_invalid: 'സാധുതാപരിശേധയില്‍ പരാജയപ്പെട്ടു 1%{errors}'
+        record_invalid: സാധുതാപരിശേധയില്‍ പരാജയപ്പെട്ടു 1%{errors}
         improbable_phone: അസാധുവായ നമ്പറാണ്
-  smooch_bot_meme: താങ്കളയച്ച വിവരങ്ങള്‍ ഉപയോഗിച്ചുണ്ടാക്കിയ  മീം ആണിത്. കൂടുതൽ വിവരങ്ങള്‍ക്ക് ഇവിടെ നോക്കൂ %{url}
+  smooch_bot_meme: താങ്കളയച്ച വിവരങ്ങള്‍ ഉപയോഗിച്ചുണ്ടാക്കിയ  മീം ആണിത്. കൂടുതൽ വിവരങ്ങള്‍ക്ക്
+    ഇവിടെ നോക്കൂ %{url}
   smooch_bot_result_changed: |-
-      താങ്കളുടെ  *%{previous_status}* എന്നടയാളപ്പെടുത്തിയിരുന്ന സന്ദേശം
-      *%{status}*
+    താങ്കളുടെ  *%{previous_status}* എന്നടയാളപ്പെടുത്തിയിരുന്ന സന്ദേശം
+    *%{status}*
 
-      എന്നാക്കി മാറ്റിയിരിക്കുന്നു. ഈ നിഗമനത്തിലെത്താന്‍ ഞങ്ങള്‍ സ്വീകരിച്ച മാര്‍ഗ്ഗം ഇതാണ്  3 %{url}.
-  smooch_bot_disabled_checkpoint: |-
-      സന്ദേശമയച്ചതിന് നന്ദി. പൊതു തെരഞ്ഞെടുപ്പുകാലത്ത് പ്രചരിച്ച വ്യാജവസ്തുതകളെ കുറിച്ചുപഠിക്കുന്ന ചെക്ക് പോയിന്‍റ് എന്ന പദ്ധതിയുടെ ഭാഗമായി ഉപയോഗിച്ചിരുന്ന ടിപ് ലൈന്‍ ഇപ്പോള്‍ നിലവിലില്ല.
-      ആയതിനാല്‍ താങ്കള്‍ക്ക് പരിശോധനാ റിപ്പോര്‍ട്ട് അയക്കാനാവില്ലെന്ന് അറിയിക്കട്ടെ.
+    എന്നാക്കി മാറ്റിയിരിക്കുന്നു. ഈ നിഗമനത്തിലെത്താന്‍ ഞങ്ങള്‍ സ്വീകരിച്ച മാര്‍ഗ്ഗം ഇതാണ്  3 %{url}.
