--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1,9 +1,11 @@
+---
 hi:
   statuses:
     media:
       undetermined:
         label: शुरू नहीं किया गया
-        description: दोषपूर्ण, बस जांच करने के लिए जोड़ा गया है, कोई काम शुरू नहीं हुआ है।
+        description: दोषपूर्ण, बस जांच करने के लिए जोड़ा गया है, कोई काम शुरू नहीं
+          हुआ है।
       not_applicable:
         label: अनिर्णायक
         description: मौजूद सबूतों के आधार पर कोई निष्कर्ष नहीं निकाला जा सकता।
@@ -11,7 +13,7 @@ hi:
         label: जारी है
         description: काम शुरू हो गया है किंतु कोई अनुवाद अभी तक नहीं हुआ है।
       not_true:
-        label: 'गलत'
+        label: गलत
         description: 'निष्कर्ष : इस विषय की सामग्री गलत है।'
       verified:
         label: सत्यापित
@@ -24,7 +26,8 @@ hi:
         description: अनुवाद हो गया है, समीक्षा का है इंतजार
       ready:
         label: तैयार
-        description: अनुवाद की समीक्षा हो गई है और प्रकाशन के लिए मंजूरी दे दी गई है।
+        description: अनुवाद की समीक्षा हो गई है और प्रकाशन के लिए मंजूरी दे दी गई
+          है।
       error:
         label: त्रुटिपूर्ण
       'false':
@@ -41,10 +44,10 @@ hi:
         label: निरर्थक
       unstarted:
         label: अभी शुरू नहीं किया गया
-        description: यह दोषपूर्ण है, जांच के लिए शामिल किया गया है, काम शुरू नहीं हुआ है।
-  smooch_bot_meme: आपके द्वारा भेजी गई सामग्री के आधार पर हमने एक मीम तैयार किया है जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके बारे में और अधिक जानें %{url}
-  smooch_bot_result_changed: |-
-      [सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के लिए हमने यहां पहल की है:%{url}
-  smooch_bot_disabled_checkpoint: |-
-      संदेश भेजने के लिए धन्यवाद।
-      हम किसी भी सत्यापन रिपोर्ट को वापस भेजने में अब असमर्थ हैं, क्योंकि भारत में आम चुनावों के दौरान गलत जानकारी का अध्ययन करने के लिए प्रोजेक्ट चेकप्वाइंट अब इस टिपलाइन का उपयोग नहीं कर रहा है।
+        description: यह दोषपूर्ण है, जांच के लिए शामिल किया गया है, काम शुरू नहीं
+          हुआ है।
+  smooch_bot_meme: आपके द्वारा भेजी गई सामग्री के आधार पर हमने एक मीम तैयार किया है
+    जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके बारे में और अधिक जानें %{url}
+  smooch_bot_result_changed: "[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा
+    किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के
+    लिए हमने यहां पहल की है:%{url}"
