--- a/config/locales/te.yml
+++ b/config/locales/te.yml
@@ -1,3 +1,4 @@
+---
 te:
   statuses:
     media:
@@ -11,8 +12,8 @@ te:
         label: ప్రక్రియలొ ఉన్నది
         description: పని మొదలయినది కాని ఇంకా అనువాదం అవ్వలేదు
       not_true:
-        label: 'తప్పు'
-        description: 'నిర్ధారణ - ఐటెం కంటెంట్ తప్పు'
+        label: తప్పు
+        description: నిర్ధారణ - ఐటెం కంటెంట్ తప్పు
       verified:
         label: వెరిఫై చేయబడినది
         description: 'నిర్ధారణ - ఐటెం కంటెంట్ వెరిఫై చేయబడినది '
@@ -28,7 +29,7 @@ te:
       error:
         label: ఆటంకం
       'false':
-        description: 'నిర్ధారణ - ఐటెం కంటెంట్ తప్పు'
+        description: నిర్ధారణ - ఐటెం కంటెంట్ తప్పు
       inconclusive:
         label: నిర్ధారింపలేనిది
       misleading:
@@ -42,11 +43,8 @@ te:
       unstarted:
         label: మొదలవలేదు
         description: డెఫాల్ట్, ఇప్పుడే Checkకు జొడించాం, పని మొదలవలేదు
-  smooch_bot_meme: మీరు నిజ నిర్ధారణ కోసం పంపిన అయిటం ఆధారముగా మేము ఈ మేఎం తయారు చేసాము. మరింత సమాచారం కొరకు %{url}
+  smooch_bot_meme: మీరు నిజ నిర్ధారణ కోసం పంపిన అయిటం ఆధారముగా మేము ఈ మేఎం తయారు చేసాము.
+    మరింత సమాచారం కొరకు %{url}
   smooch_bot_result_changed: |-
-      [వెరిఫికేషన్ రిపొర్ట్ - దిద్దుబాటు] మీరు పంపిన మెస్సెజ్ %{previous_status}నుంచి
-      %{status}అని మారినది. ఈ విధముగా గుర్తించడానికి మేము అనుసరించిన విధానము %{url}
-  smooch_bot_disabled_checkpoint: |-
-      ఈ మెసేజ్ పంపినందుకు ధన్యవాదములు.
-
-      ప్రాజెక్ట్ చెక్-పాయింట్ ఇంక ఈ టిప్-లైన్ ను భారత సాధారణ ఎన్నికల సమయములొ తప్పుడు సమాచర ప్రసరణను విశ్లేషించుటకు ఉపయొగించటములేదు. కావున మేము ఇక మీదట మీకు ధ్రువీకరణ రిపొర్ట్స్ పంపలేము.
+    [వెరిఫికేషన్ రిపొర్ట్ - దిద్దుబాటు] మీరు పంపిన మెస్సెజ్ %{previous_status}నుంచి
+    %{status}అని మారినది. ఈ విధముగా గుర్తించడానికి మేము అనుసరించిన విధానము %{url}
