--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -51,3 +51,30 @@ hi:
   smooch_bot_result_changed: "[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा
     किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के
     लिए हमने यहां पहल की है:%{url}"
+  custom_message_smooch_bot_ask_for_confirmation_checkpoint: इस संदेश को भेजने के
+    लिए धन्यवाद। क्या आपको संदेह है कि यह भारतीय आम चुनाव 2019 से संबंधित गलत सूचना
+    है? अगर आप हां करते हैं तो 1 लिखें। कुछ और लिखेंगे तो हम संपर्क जारी नहीं रख सकेंगे।
+  custom_message_smooch_bot_message_confirmed_checkpoint: धन्यवाद। आपका सन्देश हमें
+    इन चुनावों के दौरान व्हाट्सएप पर गलत सूचना के प्रचार- प्रसार पर शोध करने में मदद
+    करेगा। इस सामग्री को हमने सत्यापन के लिए शामिल किया है। हम आपको 24 घंटे के भीतर
+    रिपोर्ट देने की कोशिश करेंगे। लेकिन ध्यान रखें- हम आपके हर अनुरोध का जवाब देने
+    में सक्षम नहीं हैं।
+  custom_message_smooch_bot_message_unconfirmed_checkpoint: चूंकि आपने 1 लिखकर उत्तर
+    नहीं दिया था, इसलिए हम आपके संदेश को आगे नहीं बढ़ा सकते। धन्यवाद।
+  custom_message_smooch_bot_disabled_checkpoint: |-
+    संदेश भेजने के लिए धन्यवाद।
+    हम किसी भी सत्यापन रिपोर्ट को वापस भेजने में अब असमर्थ हैं, क्योंकि भारत में आम चुनावों के दौरान गलत जानकारी का अध्ययन करने के लिए प्रोजेक्ट चेकप्वाइंट अब इस टिपलाइन का उपयोग नहीं कर रहा है।
+  custom_message_smooch_bot_message_type_unsupported_checkpoint: क्षमा करें, सत्यापन
+    के लिए इस तरह के फाइल फार्मेट का हम समर्थन नहीं करते हैं।
+  custom_message_smooch_bot_meme_checkpoint: आपके द्वारा भेजी गई सामग्री के आधार पर
+    हमने एक मीम तैयार किया है जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके
+    बारे में और अधिक जानें %{url}
+  custom_message_smooch_bot_result_checkpoint: |-
+    [सत्यापन रिपोर्ट] आपके द्वारा हमारे साथ साझा किया गया संदेश चिह्नित है।*%{status}*
+    इसे निर्धारित करने के लिए हमने यहां कदम उठाए हैं: %{url}
+  custom_message_smooch_bot_result_changed_checkpoint: "[सत्यापन रिपोर्ट - सुधार]
+    आपके द्वारा हमारे साथ साझा किया संदेश बदल गया है *%{previous_status}* से *%{status}*
+    इसे निर्धारित करने के लिए हमने यहां पहल की है:%{url}"
+  custom_message_smooch_bot_not_final_checkpoint: "[सत्यापन रिपोर्ट - सुधार] आपके
+    द्वारा हमारे साथ साझा किया गया संदेश गलत तरीके से चिह्नित किया गया था। *%{status}*
+    आगे के सत्यापन के लिए यह अभी भी हमारी पंक्ति में है।"
