--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -216,7 +216,6 @@ ru:
   mail_view_welcome: Добро пожаловать в %{app_name}
   mail_view_register: 'Вы уже совсем близко к тому, чтобы начать пользоваться %{app_name}!
     Пожалуйста, перейдите по ссылке, чтобы подтвердить свой e-mail адрес:'
-  pender_could_not_parse: Не удалось обработать медиа-объект
   slack_restricted_join_to_members: К сожалению, группа %{team_name} доступна только
     членам %{teams} в Slack.
   admin:
@@ -518,3 +517,33 @@ ru:
   smooch_requests: Запросы
   smooch_requests_asc: Наименее запрашиваемые
   smooch_requests_desc: Самые запрашиваемые
+  custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
+    Спасибо за ваше сообщение!
+
+    Вы подозреваете, что это дезинформация, связанная с выборами 2019 года в Индии?
+
+    Если да, *отправьте 1*. Любой другой ответ завершит беседу.
+  custom_message_smooch_bot_message_confirmed_checkpoint: |-
+    Спасибо. Ваше сообщение поможет нам исследовать распространение дезинформации во время выборов через WhatsApp.
+
+    Сообщение также было добавлено в очередь на верификацию. Мы постараемся отправить вам отчёт в течение 24 часов, но, к сожалению, мы можем ответить не на все запросы.
+  custom_message_smooch_bot_message_unconfirmed_checkpoint: Поскольку вы не ответили
+    «1», беседа будет завершена. Спасибо.
+  custom_message_smooch_bot_disabled_checkpoint: "Спасибо за ваше сообщение. \nК сожалению,
+    мы не сможем провести верификацию, поскольку проект Checkpoint больше не принимает
+    отчеты о дезинформации во время выборов в Индии."
+  custom_message_smooch_bot_message_type_unsupported_checkpoint: Извините, но мы пока
+    не принимаем файлы этого формата для верификации.
+  custom_message_smooch_bot_meme_checkpoint: 'Вот картинка, которую мы создали по
+    материалу, полученному от вас для верификации. Подробнее: %{url}.'
+  custom_message_smooch_bot_result_checkpoint: |-
+    [Отчёт о верификации] Сообщение, которое вы нам отправили, получило отметку «*%{status}*».
+
+    Вы можете ознакомиться со всеми шагами, предпринятыми для верификации, по ссылке: %{url}
+  custom_message_smooch_bot_result_changed_checkpoint: |-
+    [Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, получило новую отметку: «*%{status}*» (ранее отмечено как «*%{previous_status}*»).
+
+    Вы можете ознакомиться со всеми шагами, предпринятыми для верификации, по ссылке: %{url}
+  custom_message_smooch_bot_not_final_checkpoint: "[Отчёт о верификации — ИЗМЕНЕНИЕ]
+    Сообщение, которое вы нам отправили, было некорректно отмечено как «*%{status}*».
+    Сообщение возвращено в очередь и ожидает верификации."
