Feature/7571 two factor authentication (#434)
* Ticket #7571 - enable and configure 2fa

* Ticket #7571 - check 2fa while user login with username/password

* Ticket #7571 - enable/disable 2FA

* Ticket #7571 - update relay.json

* Ticket #7571 - add new mutation for two factor and backupcodes

* Ticket #7571 - add tests

* Ticket #7571 - fix CC and add more tests

* Ticket #7571 - fix tests

* Ticket #7571 - reformat 2FA errors

* Ticket #7571 - add missing tests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -362,8 +362,8 @@ en:
     invalid: Invitation token is invalid.
     no_invitation: No invitation exists for team %{name}
   error_user_is_not_a_team_member: Sorry, you can only assign to members of this team
-  error_login_with_exists_account: Sorry, there is another user who is already using
-    this account
+  error_login_with_exists_account: Sorry, there is another user who is already using this account
+  error_login_2fa: Please complete your sign-in by supplying an authentication code.
   mail_see_it: 'You can see it at: '
   mails_notifications:
     greeting: Hello %{username},
